--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         <div class="arrow-left">
             <i class="fas fa-chevron-circle-left"></i>
         </div>
+
         <div class="image">
+
             <img class="active" src="https://source.unsplash.com/user/erondu/1600x900">
-            <img src="https://source.unsplash.com/user/erondu/1600x900">
-            <img src="https://source.unsplash.com/user/erondu/1600x900">
-            <img src="https://source.unsplash.com/user/erondu/1600x900">
+            <img src="https://source.unsplash.com/collection/190727/1600x900">
+            <img src="https://source.unsplash.com/WLUHO9A_xik/1600x900">
+            <img class="last" src="https://source.unsplash.com/user/erondu/daily">
+
             <div class="slider">
 
                 <span class="circle"></span>
@@ -30,6 +33,7 @@
                 <span class="circle"></span>
 
             </div>
+
         </div>
         <div class="arrow-right">
             <i class="fas fa-chevron-circle-right"></i>
