--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    <h1>Slider Image</h1>
+
     <div id="app">
         <div class="arrow-left">
             <i class="fas fa-chevron-circle-left"></i>
@@ -20,10 +22,10 @@
 
         <div class="image">
 
-            <img class="active" src="https://source.unsplash.com/user/erondu/1600x900">
+            <img class="first active" src="https://source.unsplash.com/user/erondu/1600x900">
             <img src="https://source.unsplash.com/collection/190727/1600x900">
             <img src="https://source.unsplash.com/WLUHO9A_xik/1600x900">
-            <img class="last" src="https://source.unsplash.com/user/erondu/daily">
+            <img class="last" src="https://source.unsplash.com/user/erondu">
 
             <div class="slider">
 
