--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="assets/main.css">
     <!-- Link CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <title>Slider Image</title>
 </head>
 
 <body>
-
-    <h1>Slider Image</h1>
 
     <div id="app">
         <div class="arrow-left">
@@ -22,21 +21,23 @@
 
         <div class="image">
 
-            <img class="first active" src="https://source.unsplash.com/user/erondu/1600x900">
-            <img src="https://source.unsplash.com/collection/190727/1600x900">
-            <img src="https://source.unsplash.com/WLUHO9A_xik/1600x900">
-            <img class="last" src="https://source.unsplash.com/user/erondu">
+            <img class="first active" src="assets/img/img-1.jpg">
+            <img src=assets/img/img-2.jpg>
+            <img src="assets/img/img-3.jpg">
+            <img class="last" src="assets/img/img-4.jpg">
 
-            <div class="slider">
-
-                <span class="circle"></span>
-                <span class="circle"></span>
-                <span class="circle"></span>
-                <span class="circle"></span>
-
-            </div>
 
         </div>
+
+        <div class="slider">
+
+            <span class="first-circle circle active-circle"></span>
+            <span class="circle"></span>
+            <span class="circle"></span>
+            <span class="last-circle circle"></span>
+
+        </div>
+
         <div class="arrow-right">
             <i class="fas fa-chevron-circle-right"></i>
         </div>
